--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
+# mac stuff
+.DS_Store
+
+# gradle stuff
+build
+.gradle
+
+# intellij stuff
+.idea
+*.iml
+
+# eclipse stuff
+.classpath
+.project
+.settings
+eclipse
+bin
+*.launch
+
+# intellij stuff
+.idea
+*.iml
+
+# run configuration
+run
+
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +36,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/bin/
