--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ version = "${project.config.mod_version}." + (System.getenv("BUILD_NUMBER") ?: "
 println config.mc_version + "-" + config.forge_version
 // Setup the forge minecraft plugin data. Specify the preferred forge/minecraft version here
 minecraft {
-    version = config.mc_version + "-" + config.forge_version + "-" + config.mc_version
+    version = config.mc_version + "-" + config.forge_version
     mappings = config.mappings
     runDir = "run"
     replace '${mod_version}', project.config.mod_version
@@ -123,18 +123,18 @@ uploadArchives {
                     project {
                         name project.archivesBaseName
                         packaging 'jar'
-                        description 'CodeChickenLib'
-                        url 'https://github.com/TheCBProject/CodeChickenLib'
+                        description 'Tool-Combine'
+                        url 'https://github.com/S4lad/Tool-Combine'
 
                         scm {
-                            url 'https://github.com/TheCBProject/CodeChickenLib'
-                            connection 'scm:git:git://github.com/TheCBProject/CodeChickenLib.git'
-                            developerConnection 'scm:git:git@github.com:TheCBProject/CodeChickenLib.git'
+                            url 'https://github.com/S4lad/Tool-Combine'
+                            connection 'scm:git:git://github.com/S4lad/Tool-Combine.git'
+                            developerConnection 'scm:git:git@github.com:S4lad/Tool-Combine.git'
                         }
 
                         issueManagement {
                             system 'github'
-                            url 'https://github.com/TheCBProject/CodeChickenLib/issues'
+                            url 'https://github.com/S4lad/Tool-Combine/issues'
                         }
 
                         licenses {
@@ -147,8 +147,8 @@ uploadArchives {
 
                         developers {
                             developer {
-                                id 'chicken-bones'
-                                name 'chicken-bones'
+                                id 's4lad'
+                                name 'S4lad'
                                 roles { role 'developer' }
                             }
                         }
